# chattycrystal

./: .gitignore  .gitmodules  INSTALL.md  Makefile  README.md  audio.asm  charmap.asm  chattycrystal.link  constants.asm  home.asm  hram.asm  macros.asm  main.asm  pokecrystal.link  sram.asm  titles.txt  version.asm  wram.asm
audio/: cries.asm  cry_pointers.asm  engine.asm  music_pointers.asm
constants/: battle_anim_constants.asm  battle_constants.asm  battle_tower_constants.asm  collision_constants.asm  credits_constants.asm  cry_constants.asm  deco_constants.asm  event_flags.asm  icon_constants.asm  item_constants.asm  item_data_constants.asm  landmark_constants.asm  map_constants.asm  map_object_constants.asm  mart_constants.asm  menu_constants.asm  misc_constants.asm  move_constants.asm  move_effect_constants.asm  music_constants.asm  phone_constants.asm  pokemon_constants.asm  pokemon_data_constants.asm  scene_constants.asm  script_constants.asm  sfx_constants.asm  sprite_constants.asm  text_constants.asm  tileset_constants.asm  trainer_constants.asm  trainer_data_constants.asm  type_constants.asm  wram_constants.asm
controller/: Cargo.toml  chatter_emotes.json  config.json
controller/src/: bizhawk.rs  endpoints.rs  main.rs
data/: collision_permissions.asm  credits_script.asm  credits_strings.asm  engine_flags.asm  icon_pointers.asm  party_menu_qualities.asm  player_names.asm  predef_pointers.asm  sgb_ctrl_packets.asm  special_pointers.asm  tilesets.asm
docs/: chatter.md  chatty_hidden_power.md
engine/: chattywritearea.asm
gfx/: battle_anims.asm  (+9 more)
(+2015 files in other folders)
